# ros2-windows-pixi

./: .gitignore  LICENSE  README.md  pixi.toml  ros2-jazzy-activate.bat
colcon_ws/src/spin_controller/: CMakeLists.txt  package.xml
colcon_ws/src/spin_controller/include/spin_controller/: spin_controller_lib.hpp  visibility_control.h
colcon_ws/src/spin_controller/src/: spin_controller_lib.cpp  spin_controller_main.cpp
colcon_ws/src/xbox_controller/: CMakeLists.txt  package.xml
colcon_ws/src/xbox_controller/include/xbox_controller/: xbox_joystick.hpp  xbox_lifecycle_node.hpp
colcon_ws/src/xbox_controller/src/: xbox_joystick.cpp  xbox_lifecycle_node.cpp
